tests/ui/parser/let-binop.stderr
error: can't reassign to an uninitialized variable
  --> $DIR/let-binop.rs:4:15
   |
LL |     let a: i8 *= 1;
   |               ^^
   |
   = help: if you meant to overwrite, remove the `let` binding
help: initialize the variable
   |
LL -     let a: i8 *= 1;
LL +     let a: i8 = 1;
   |

error: can't reassign to an uninitialized variable
  --> $DIR/let-binop.rs:6:11
   |
LL |     let b += 1;
   |           ^^
   |
   = help: if you meant to overwrite, remove the `let` binding
help: initialize the variable
   |
LL -     let b += 1;
LL +     let b = 1;
   |

error: can't reassign to an uninitialized variable
  --> $DIR/let-binop.rs:8:11
   |
LL |     let c *= 1;
   |           ^^
   |
   = help: if you meant to overwrite, remove the `let` binding
help: initialize the variable
   |
LL -     let c *= 1;
LL +     let c = 1;
   |

error: aborting due to 3 previous errors

